Updating Dockerfile to install additional packages for proper container execution

--- a/Nessie/Dockerfile
+++ b/Nessie/Dockerfile
@@ -5,7 +5,9 @@ FROM registry.suse.com/bci/bci-base:15.6
 RUN zypper --non-interactive ref && \
     zypper --non-interactive install \
     python312 \
-    python312-pip
+    python312-pip \
+    helm \
+    systemd
 
 # Use pip to install kubernetes client
 RUN python3.12 -m pip install pyyaml kubernetes
