--- a/ketchup/Cargo.toml
+++ b/ketchup/Cargo.toml
@@ -10,6 +10,7 @@ description = "A tool to collect Kubernetes cluster configurations"
 clap = { version = "4.0", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+serde_json = "1.0"
 
 # Async runtime
 tokio = { version = "1.0", features = ["full"] }
@@ -24,6 +25,9 @@ anyhow = "1.0"
 # Archive creation
 tar = "0.4"
 flate2 = "1.0"
+
+# Date/time for timestamping
+chrono = { version = "0.4", features = ["serde"] }
 
 # Logging
 tracing = "0.1"
